--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <span class="toronto-separator">|</span>
         <span class="metals-label">Metals</span>
-        <span id="metals-inline" class="metals-inline">Loading…</span>
+        <span id="metals-inline" class="metals-inline" aria-live="polite">Loading…</span>
       </div>
     </div>
 
