--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- Toronto time + weather + Metals (inline like weather) -->
       <div class="toronto-meta">
         <span class="toronto-label">Toronto •</span>
-        <span id="toronto-time"></span>
+        <span id="toronto-time" class="time-pill"></span>
 
         <span class="toronto-separator">|</span>
         <span id="toronto-weather"></span>
