--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <span id="toronto-weather"></span>
 
         <span class="toronto-separator">|</span>
+        <span class="metals-group">
         <span class="metals-label">Metals</span>
         <span id="metals-inline" class="metals-inline" aria-live="polite">Loading…</span>
       </div>
