--- a/index.html
+++ b/index.html
@@ -81,23 +81,26 @@
         <a href="blogs.html">Blogs</a>
       </nav>
 
-<!-- Toronto time + weather + Metals -->
-<div class="toronto-meta" id="torontoMeta">
-  <span class="toronto-label">Toronto</span>
-  <span class="toronto-dot">•</span>
+      <!-- Toronto time + weather + Metals -->
+      <div class="toronto-meta" id="torontoMeta">
+        <span class="toronto-label">Toronto</span>
+        <span class="toronto-dot">•</span>
 
-  <!-- Time (always visible) -->
-  <span id="toronto-time" class="time-pill segment" data-seg="time"></span>
+        <!-- Time (always visible) -->
+        <span id="toronto-time" class="time-pill segment" data-seg="time"></span>
 
-  <!-- Weather (hidden until JS populates) -->
-  <span id="toronto-weather" class="segment" data-seg="weather" hidden></span>
+        <!-- Weather (hidden until JS populates) -->
+        <span id="toronto-weather" class="segment" data-seg="weather" hidden></span>
 
-  <!-- Metals (always present; content updated by JS) -->
-  <span class="metals-group segment" data-seg="metals">
-    <span class="metals-label">Metals</span>
-    <span id="metals-inline" class="metals-inline" aria-live="polite">Loading…</span>
-  </span>
-</div>
+        <!-- Metals (always present; content updated by JS) -->
+        <span class="metals-group segment" data-seg="metals">
+          <span class="metals-label">Metals</span>
+          <span id="metals-inline" class="metals-inline" aria-live="polite">Loading…</span>
+        </span>
+      </div>
+    </div> <!-- ✅ CLOSE top-bar -->
+
+
 
 
     <!-- Hero: two-column layout -->
