--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     This uses your existing profile JPG as a fallback to avoid 404s.
     If you add a favicon later, update these two lines to that file.
   -->
-  <link rel="icon" type="image/jpeg" href="assets/images/Profile/IMG-8092.JPG">
+  <link id="favicon" rel="icon" type="image/jpeg" href="assets/images/Profile/IMG-8092.JPG">
   <link rel="apple-touch-icon" href="assets/images/Profile/IMG-8092.JPG">
 
   <!-- Canonical URL -->
