--- a/index.html
+++ b/index.html
@@ -363,10 +363,55 @@
     </section>
 
     <!-- PROJECTS -->
-    <section id="projects" class="reveal" data-delay="1">
-      <div class="card">
-        <h2>Selected projects</h2>
-        <p class="card-subtitle">Examples of PLM and integration outcomes.</p>
+<section id="projects" class="reveal" data-delay="1">
+  <div class="card">
+    <h2>Selected projects</h2>
+    <p class="card-subtitle">Examples of PLM and integration outcomes.</p>
+
+    <!-- Featured Projects carousel -->
+    <div class="carousel-wrap" aria-label="Featured projects">
+      <button class="carousel-btn prev" type="button" aria-label="Scroll projects left">‹</button>
+
+      <div class="carousel" id="featuredProjects">
+        <a class="carousel-card" href="#proj-digital-thread">
+          <div class="carousel-kicker">Featured</div>
+          <div class="carousel-title">Unified PLM–ERP digital thread</div>
+          <div class="carousel-meta">BSA / PLM Functional Lead</div>
+          <ul class="carousel-bullets">
+            <li>Roadmap + integration patterns</li>
+            <li>Traceability + audit readiness</li>
+          </ul>
+        </a>
+
+        <a class="carousel-card" href="#proj-teamcenter-t4o">
+          <div class="carousel-kicker">Featured</div>
+          <div class="carousel-title">Teamcenter ↔ Oracle ERP via T4O</div>
+          <div class="carousel-meta">PLM Integration Architect</div>
+          <ul class="carousel-bullets">
+            <li>Parts/BOM/changes synchronization</li>
+            <li>Interface specs + error handling</li>
+          </ul>
+        </a>
+
+        <a class="carousel-card" href="#proj-agile-fmw">
+          <div class="carousel-kicker">Featured</div>
+          <div class="carousel-title">Agile PLM ↔ EBS via Fusion MW</div>
+          <div class="carousel-meta">Solution Architect</div>
+          <ul class="carousel-bullets">
+            <li>Event-driven integrations</li>
+            <li>Reduced incidents via monitoring</li>
+          </ul>
+        </a>
+      </div>
+
+      <button class="carousel-btn next" type="button" aria-label="Scroll projects right">›</button>
+    </div>
+
+    <!-- Your existing project items continue below -->
+    <div class="item">
+      ...
+    </div>
+
 
         <div class="item">
           <div class="item-title">Unified PLM - ERP digital thread for medical devices</div>
