--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
       <button class="carousel-btn next" type="button" aria-label="Scroll projects right">›</button>
     </div>
 
-        <div class="item">
+        <div class="item" id="proj-digital-thread">
           <div class="item-title">Unified PLM - ERP digital thread for medical devices</div>
           <div class="item-meta">Role: Business Systems Analyst / PLM Functional Lead</div>
           <ul>
@@ -418,7 +418,7 @@
           </ul>
         </div>
 
-        <div class="item">
+        <div class="item" id="proj-teamcenter-t4o">
           <div class="item-title">Teamcenter and Oracle ERP integration using T4O</div>
           <div class="item-meta">Role: PLM Integration Architect / Consultant</div>
           <ul>
@@ -429,7 +429,7 @@
           </ul>
         </div>
 
-        <div class="item">
+        <div class="item" id="proj-agile-fmw">
           <div class="item-title">Agile PLM and ERP integration via Oracle Fusion Middleware</div>
           <div class="item-meta">Role: Solution Architect / Integration Analyst</div>
           <ul>
